--- a/google6218ee1da238867a.html
+++ b/google6218ee1da238867a.html
@@ -1,1 +1,2 @@
+<meta name="google-site-verification" content="JdqABgcqlvvCoS1bszQCWKnq6hYi-Ddj5FZ9gjs0yDk" />
 google-site-verification: google6218ee1da238867a.html
